--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,11 +35,17 @@ html, body {
   width: 98% !important;
 } */
 
+/* logo */
+#logo {
+  width: 80px !important;
+  height: 65px !important;
+}
+
 /* Hero (Desktop) */
 .hero-section {
   width: 100%;
   height: 100vh;
-  background-image: url('/assets/images/hero/hero-6.svg');
+  background-image: url('/assets/images/hero/hero-7.svg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -159,13 +165,7 @@ html, body {
 }
 
 
-.services-title {
-  font-size: 17px !important;
-}
 
-.services-description {
-  font-size: 13px !important;
-}
 
 #services-text {
   display: grid;
@@ -183,6 +183,12 @@ html, body {
 
 /*1920*1080*/
 @media screen and (min-width: 1920px) {
+
+
+  .headertext {
+    font-size: larger !important;
+  }
+  
   .nine20 {
     width: 80%;
   }
@@ -191,7 +197,7 @@ html, body {
   }
 
   #services-container {
-    width: 85%;
+    width: 80%;
   }
 
   #services-card {
@@ -275,6 +281,8 @@ html, body {
     background-repeat: no-repeat;
     background-position: top center;
     height: 70vh;
+    display: grid
+
   }
 
   #hero {
@@ -284,6 +292,11 @@ html, body {
   .hero-main {
     max-width: 100%;
     margin-top: 12%;
+    min-height: 35vh;
+  }
+  .hero-main-2 {
+    display: grid;
+    gap: 1.8em;
   }
 
   .hero-text {
@@ -291,14 +304,11 @@ html, body {
     font-size: 28px;
   }
 
-  .hero-main-2 {
-    display: grid;
-    gap: 1.8em;
-  }
+
   
   .heelHeid-Logo {
     width: 60px;
-    height: 60.17px;
+    /* height: 60.17px; */
     margin-left: 1em
   }
 
@@ -368,6 +378,15 @@ html, body {
   display: grid;
    gap: 15px
  }
+
+ .about-modal {
+    height: 100vh !important;
+  }
+
+  /* .media-overflow {
+    overflow: scroll !important;
+    background-color: #E86512 !important;
+  } */
 
 }
 
