--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,6 +57,29 @@ html, body {
   position: relative;
 }
 
+/* Hero (Desktop) */
+.hero-section {
+  width: 100%;
+  height: 100vh;
+  background-color: #1a1a1a; /* Fallback background color */
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 4rem 1rem;
+  position: relative;
+  transition: background-image 0.5s ease-in-out; /* Smooth transition */
+}
+
+/* Add a class to apply the image once loaded */
+.hero-section.image-loaded {
+  background-image: url('/assets/images/hero/hero-7.svg');
+}
+
+
 .hero-text {
   line-height: 1.2em
 }
@@ -381,6 +404,10 @@ html, body {
 
  .about-modal {
     height: 100vh !important;
+  }
+
+  .about {
+    margin-top: 15px
   }
 
   /* .media-overflow {
